# SlayTheSpire2Agent

./: .gitignore  HANDOFF.md  README.md  combat_reward_test.py  combat_test.py  live_view.py  pyproject.toml  shop_test.py  visualize_map.py
checkpoints/: ppo_curriculum_silu_full_act1_boss.pt
data/: manifest.json
docs/: major_update_v0_107_1_audit.md
live_traces/: latest_capture.json  live_after_agent_smoke.json  live_agent_combat_smoke.json  live_agent_post_restart.json  live_agent_smoke.json  live_agent_true_parity_end_turn_smoke.json  live_agent_true_parity_latest.json  live_agent_true_parity_smoke.json  start_live_run.json  start_live_run_current.json
reports/: ppo_curriculum_silu_act1_boss_latest.html  ppo_curriculum_silu_act1_boss_latest_best_run_history.html  ppo_curriculum_silu_act1_boss_latest_best_run_history.json  ppo_curriculum_silu_act1_boss_latest_best_run_map.txt  ppo_curriculum_silu_act1_boss_latest_worst_run_history.html  ppo_curriculum_silu_act1_boss_latest_worst_run_history.json  ppo_curriculum_silu_act1_boss_latest_worst_run_map.txt  ppo_curriculum_silu_act1_boss_progress.json  ppo_curriculum_silu_act2_boss_latest.html  ppo_curriculum_silu_act2_boss_latest_best_run_history.html  ppo_curriculum_silu_act2_boss_latest_best_run_map.txt  ppo_curriculum_silu_act2_boss_latest_worst_run_history.html  ppo_curriculum_silu_act2_boss_latest_worst_run_history.json  ppo_curriculum_silu_act2_boss_latest_worst_run_map.txt  ppo_curriculum_silu_act2_boss_progress.json  ppo_curriculum_silu_full_act1_boss_latest.html  ppo_curriculum_silu_full_latest.html  (+23 more)
(+217 files in other folders)
