[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sts2sim"
version = "0.1.0"
description = "Headless Slay the Spire 2 simulator for deterministic agent training."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SlayTheSpire2Agent contributors" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.8",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
rl = [
  "gymnasium>=0.29",
  "numpy>=1.26",
]

[project.scripts]
sts2sim = "sts2sim.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sts2sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "B008",  # Typer intentionally uses Option/Argument calls in defaults.
  "UP042", # str Enum keeps pydantic/json behavior explicit and compatible.
  "UP047", # PEP 695 function type params add little value here.
]

[tool.mypy]
python_version = "3.12"
packages = ["sts2sim"]
strict = true
warn_unused_ignores = true
warn_return_any = true
